ode4j CHANGELOG
---------------

the rules for this file:
  * entries are sorted newest-first.
  * summarise sets of changes.
  * don't ever delete anything.
  * keep the format consistent (79 char width, YYYY-MM-DD date format).

------------------------------------------------------------------------------

2010-Jan-18 Tilmann Zaschke
		* Fixed another problem in GIMPACT (still buggy).

2010-Jan-17 Tilmann Zaschke
		* Improved version with GIMPACT (still buggy).
		  DemoBasket and DemoCyl are working now.
		* Updated copyright information.

2010-Jan-10 Tilmann Zaschke
		* Added initial version for TRIMESH support via GIMPACT (still buggy).

2009-Dec-10 Tilmann Zaschke
		* Fixed bugs where setting a body's dampening or auto-disable 
		  parameters would set these parameters for all other bodies and the 
		  associated world as well. -> BUG ID: 2912249
		* reduced visibility of some public fields in DxWorld and DxBody.

2009-Dec-07 Tilmann Zaschke
		* Removed @brief tags in javadoc except cpp javadoc.

2009-Nov-30 Tilmann Zäschke
		* Cleaned up argument parsing in demos. 
		* API change: DrawStuff.setOuputNull() -> dsSetOutputNull()

2009-Nov-29 Tilmann Zäschke
		* Fixed bug ID: 2905309 -texturepath ignored, 1st argument ignored 
		* Started cleanup of DrawStuff, mainly regarding setting up
		  version and texture_path

2009-Nov-12 Tilmann Zäschke
		* Fixed crash for DemoCyl in drawstuff

2009-Aug-18 Tilmann Zäschke
		* Javadoc improvements

2009-Aug-12 Tilmann Zäschke
		* Javadoc & API for DBody completed
		* Javadoc & API for DSpace and sub-classes completed
		* Javadoc & API for DGeom and sub-classes completed
		* Fixed and reduced dependencies to .cpp and .internal
		* Fixed Bug#2836288 in DxConvex
		* Javadoc & API for DJoint and sub-classes completed
		* cleaned up javadoc a bit

2009-Aug-10 Tilmann Zäschke
		* Reduced warnings
		* Added @Override labels
		* Javadoc & API for DWorld completed

2009-Jul-22 Tilmann Zäschke
		* Copied javadoc for CppMath API.