@@ -9,6 +9,10 @@ the rules for this file:
 
 ------------------------------------------------------------------------------
 
+2010-Jan-20 Tilmann Zaschke
+		* API change renamed DContact.dSurfaceParameters to DSurfaceParameters
+		   ************ ************ ************ ************ ************
+
 2010-Jan-18 Tilmann Zaschke
 		* Fixed another problem in GIMPACT (still buggy).
 
